fix:close button visibility

--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ a {
     display: none;
   }
   .navbar-ul .component-link-item {
-    display: inherit;
+    display: block;
   }
 
   .header-section {
